# GameTranslationTool

./: .gitignore  GameTranslationTool.sln  IsoExtractor.cs  README.md  pyproject.toml  requirements.txt
GameTranslationTool.ConsoleTest/: GameTranslationTool.ConsoleTest.csproj
adapters/: __init__.py  base.py  unity.py
cli/: __init__.py  main.py
core/: __init__.py  patcher.py  text_graph.py  translator.py
src/GameTranslationTool/: .editorconfig  App.xaml  App.xaml.cs  AssemblyInfo.cs  DialogEntry.cs  GameTranslationTool.csproj  HasErrorConverter.cs  MainWindow.xaml  MainWindow.xaml.cs  TranslationSettings.cs  appsettings.example.json  appsettings.json
src/GameTranslationTool.ConsoleTest/: GameTranslationTool.ConsoleTest.csproj  Program.cs
src/GameTranslationTool.Tests/: GameTranslationTool.Tests.csproj
src/GameTranslationTool.Tests/Services/: CacheServiceTests.cs  RateLimiterTests.cs  SettingsServiceTests.cs  ValidationServiceTests.cs
src/GameTranslationTool/Constants/: Languages.cs  TranslationProvider.cs
src/GameTranslationTool/ISO/: IsoExtractor.cs  IsoRepacker.cs
src/GameTranslationTool/MVVM/: RelayCommand.cs  ViewModelBase.cs
src/GameTranslationTool/Models/: DialogEntry.cs  TranslationEntry.cs  TranslationSettings.cs
src/GameTranslationTool/Services/: CacheService.cs  ErrorHandler.cs  FileSystemService.cs  ICacheService.cs  IFileSystemService.cs  IIsoExtractor.cs  IIsoRepacker.cs  RateLimiter.cs  (+5 more)
tests/: __init__.py  test_adapters.py  test_translator.py
tests/fixtures/: sample_text_dump.json
utils/: __init__.py  encoding.py  validation.py
(+18 files in other folders)
