[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gtool"
version = "1.0.0"
description = "Game translation pipeline – extract, translate, patch"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gtool = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "core*", "utils*", "cli*"]
